# tiktok-to-youtube-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  keyboards.py  main.py  middlewares.py  pyproject.toml  states.py
handlers/: __init__.py  common.py  info.py  pairs.py  review.py  tiktok.py  youtube.py
services/: cookies.py  db.py  downloader.py  pipeline.py  quota.py  storage.py  tiktok_monitor.py  youtube_auth.py  youtube_upload.py
