[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utub-tiktok"
version = "0.1.0"
description = "Мост TikTok → YouTube с управлением через Telegram-бота (aiogram 3 + yt-dlp + YouTube Data API)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "python-dotenv>=1.0,<2",
    "yt-dlp>=2024.1.0",
    "google-api-python-client>=2.100,<3",
    "google-auth-oauthlib>=1.2,<2",
    "google-auth-httplib2>=0.2,<1",
    "keyring>=24.0",
    "aiohttp>=3.9,<4",
    "redis>=5.0,<6",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
py-modules = ["main", "config", "keyboards", "middlewares", "states"]

[tool.setuptools.packages.find]
where = ["."]
include = ["handlers*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
